// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status Fields Component should disable fields correctly 1`] = `
<React.Fragment>
  <Panel
    sectioned={true}
  >
    <Field
      component={[Function]}
      disabled={true}
      helpText="Internal use only"
      label="Test Name"
      name="name"
    />
  </Panel>
  <Panel
    sectioned={true}
  >
    <Field
      component={[Function]}
      disabled={true}
      helpText="A test may run for a maximum of 30 days"
      label="When should we run this test?"
      name="dates"
    />
  </Panel>
</React.Fragment>
`;

exports[`Status Fields Component should render correctly 1`] = `
<React.Fragment>
  <Panel
    sectioned={true}
  >
    <Field
      component={[Function]}
      helpText="Internal use only"
      label="Test Name"
      name="name"
    />
  </Panel>
  <Panel
    sectioned={true}
  >
    <Field
      component={[Function]}
      helpText="A test may run for a maximum of 30 days"
      label="When should we run this test?"
      name="dates"
    />
  </Panel>
</React.Fragment>
`;
